# MicroserviciosMMV

PARCIALES/1erParcial/: .gitignore  app.js  chafa.html  data_source.js  package-lock.json  package.json
PARCIALES/1erParcial/entity/: medico.js
PARCIALES/2doParcial/: .gitignore  docker-compose.yml
PARCIALES/2doParcial/servicio-envios/: Dockerfile  package-lock.json  package.json
PARCIALES/2doParcial/servicio-login/: Dockerfile  database.js  package-lock.json  package.json
PARCIALES/2doParcial/servicio-vehiculos/: Cargo.toml  Dockerfile
PARCIALES/2doParcial/servicio-vehiculos/proto/: vehiculos.proto
PARCIALES/2doParcial/servicio-vehiculos/src/: auth.rs  main.rs  models.rs  routes.rs
PRACTICAS/PRACTICA 01/: COMANDO PRACTICA1.txt  Practica 01.docx  ~$actica 01.docx
PRACTICAS/PRACTICA 02/EJERCICIO1/: docker-compose.yml  package-lock.json  package.json  server.js
PRACTICAS/PRACTICA 02/EJERCICIO2/: docker-compose.yml  init.sql  package.json  server.js
PRACTICAS/PRACTICA 03/: .gitignore
PRACTICAS/PRACTICA 03/E1-CALCULADORA/: app.js  index.html  package-lock.json  package.json
PRACTICAS/PRACTICA 03/E2-USUARIOS/: app.js  docker-compose.yml  package-lock.json  package.json
PRACTICAS/PRACTICA 03/E3-TAREAS/: app.js  docker-compose.yml  package-lock.json  package.json
PRACTICAS/PRACTICA 04/: .gitignore  PRACTICA4.docx
PRACTICAS/PRACTICA 04/graphql-padron-js/: package.json
PRACTICAS/PRACTICA 05/grpc-estudiantes/: .gitignore  client.js  package.json  server.js
TAREA 1/AGENDA1/: app.js
TAREAS/Microservicio Seguridad/events-service/: Cargo.toml  README.md
TAREAS/Microservicio Seguridad/events-service/src/: auth.rs  db.rs  errors.rs  logger.rs  main.rs  routes.rs
TAREAS/Microservicio Seguridad/events-service/src/models/: evento.rs  mod.rs
TAREAS/TAREA 1/: .gitignore  bd_agenda.sql
TAREAS/TAREA 4/: .env  package-lock.json  package.json
(+97 files in other folders)
