[package]
name = "vehicles-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web + runtime
axum = "0.7"
tokio = { version = "1.39", features = ["rt-multi-thread", "macros"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# JSON/serde
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

# MongoDB
mongodb = { version = "2.8", default-features = false, features = ["tokio-runtime"] }
bson = "2.13"

# Config
dotenvy = "0.15"
once_cell = "1.19"

# JWT
jsonwebtoken = "9"

# Documentación API (Swagger)
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

# gRPC
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"

# Utils
anyhow = "1.0"
thiserror = "1.0"

[build-dependencies]
tonic-build = "0.12"
futures-util = "0.3"
